[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = "Test project for POETRY package manager"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.0"
requests = "2.20.0"
pyyaml = "5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
